cmake_minimum_required(VERSION 2.8.9)
project (listen_test)
include_directories(include)
aux_source_directory(src DIR_SRCS)
set(listen_test ${DIR_SRCS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall -Wno-unused-variable -lpthread")
add_executable(listen src/receiver.cpp src/sender.cpp src/sync-test.cpp src/utils.cpp)